--- a/src/index.html
+++ b/src/index.html
@@ -9,13 +9,13 @@
       integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="/public/style.css" />
   </head>
   <body>
     <!--welcome screen -->
     <div>
       <h1 class="title">Welcome to your diary</h1>
-      <img class="img" src="images/diaryimg.png" />
+      <img class="img" src="/public/images/diaryimg.png" />
       <h2 class="name-answer">What is your name?</h2>
 
       <!--input name -->
@@ -79,7 +79,6 @@
       </div>
     </div>
 
-    <script src="./diary.js"></script>
     <script
       src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
       integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
