functions pick date and show answer ready

--- a/src/index.html
+++ b/src/index.html
@@ -12,48 +12,13 @@
     <link rel="stylesheet" href="/public/style.css" />
   </head>
   <body>
-    <!--welcome screen -->
-    <div>
-      <h1 class="title">Welcome to your diary</h1>
-      <img class="img" src="/public/images/diaryimg.png" />
-      <h2 class="name-answer">What is your name?</h2>
-
-      <!--input name -->
-      <div class="name-input">
-        <label for="name"></label>
-        <div>
-          <input
-            id="name"
-            type="text"
-            placeholder="Enter your Name"
-            name="name"
-            required
-          />
-        </div>
-      </div>
-      <!--button name submit -->
-      <div class="container-button">
-        <button id="submit" class="submit-button" type="submit">
-          Submit
-        </button>
-      </div>
-    </div>
-
     <!--answer question screen -->
     <div>
       <div class="head">
         <h2 class="name-owner">Cinthia's diary</h2>
         <label class="date" for="start"
           >Start date:
-
-          <input
-            type="date"
-            id="start"
-            name="trip-start"
-            value="2018-07-22"
-            min="2018-01-01"
-            max="2018-12-31"
-          />
+          <input name="datepicker" type="date" />
         </label>
       </div>
       <h3 class="question">How do you see yourself in 5 years?</h3>
@@ -74,9 +39,8 @@
             Save
           </button>
         </div>
-        <p class="last-answer">2019: Doing something fun.</p>
-        <p class="last-answer">2018: traveling around the world.</p>
       </div>
+      <div class="emptyDiv"></div>
     </div>
 
     <script
