--- a/src/index.html
+++ b/src/index.html
@@ -21,25 +21,27 @@
           <input name="datepicker" type="date" />
         </label>
       </div>
-      <h3 class="question">How do you see yourself in 5 years?</h3>
-      <div>
-        <div class="answer-input">
-          <h3 class="year">2020</h3>
-          <input
-            id="name"
-            type="text"
-            placeholder="Enter your answer"
-            name="name"
-            required
-          />
+      <form>
+        <h3 class="question">How do you see yourself in 5 years?</h3>
+        <div>
+          <div class="answer">
+            <h3 class="year">2021</h3>
+            <input
+              id="answer"
+              type="text"
+              placeholder="Enter your answer"
+              name="answer"
+              required
+            />
+          </div>
+          <!--button save submit -->
+          <div class="container-button">
+            <button id="submit" class="submit-button" type="submit">
+              Save
+            </button>
+          </div>
         </div>
-        <!--button save submit -->
-        <div class="container-button">
-          <button id="submit" class="submit-button" type="submit">
-            Save
-          </button>
-        </div>
-      </div>
+      </form>
       <div class="emptyDiv"></div>
     </div>
 
