final answer works

--- a/src/index.html
+++ b/src/index.html
@@ -43,6 +43,7 @@
         </div>
       </form>
       <div class="emptyDiv"></div>
+      <div class="anotherEmptyDiv"></div>
     </div>
 
     <script
