saving in localStorage

--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
           <input name="datepicker" type="date" />
         </label>
       </div>
-      <form>
+      <form class="question-form">
         <h3 class="question">How do you see yourself in 5 years?</h3>
         <div>
           <div class="answer">
