--- a/src/index.html
+++ b/src/index.html
@@ -13,40 +13,32 @@
             <div class="card-content">
                 <!--answer question screen -->
                 <section class="section-hiden" id="section-question">
-                    <div class="row">
-                        <div class="col s6 m6 l6">
-                            <p class="name-owner"></p>
-                        </div>
-                        <div class="col s6 m6 l6">
-                            <label class="date" for="start">
-                                <input name="datepicker" type="date" />
-                            </label>
-                        </div>
-                        <form class="question-form">
-                            <h1 class="question center-align"></h1>
-                            <div class="row">
-                                <div class="answer">
-                                    <div class="col l4"></div>
-                                    <div class="col s4 l2">
-                                        <h3 class="year"></h3>
-                                    </div>
-                                    <div class="input-field col s6">
+                    <header class="header">
+                        <h1 class="name-owner"></h1>
+                        <label class="date" for="start">
+                            <input name="datepicker" type="date" />
+                        </label>
+                    </header>
+                    <h2 class="question center-align"></h2>
+                    <form class="question-form">
+                        <div class="answer">
+                            <div class="container-all">
+                                <h3 class="year"></h3>
+                                <div class="input-button">
+                                    <div class="input-field">
                                         <textarea id="answer" class="materialize-textarea"></textarea>
                                         <label for="answer">Answer</label>
                                     </div>
+                                    <!--button save submit -->
+                                    <div class="container-button">
+                                        <button class="btn btn-primary" type="submit">
+                                            Save
+                                        </button>
+                                    </div>
                                 </div>
                             </div>
-                            <!--button save submit -->
-                            <div class="row">
-                                <div class="col s5 l6"></div>
-                                <div class="container-button">
-                                    <button class="btn btn-primary" type="submit">
-                                        Save
-                                    </button>
-                                </div>
-                            </div>
-                        </form>
-                    </div>
+                        </div>
+                    </form>
                     <div class="emptyDiv"></div>
                 </section>
                 <!--Welcome section-->
