second bug, with min starting date fix

--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
                             <input name="datepicker" type="date" />
                         </label>
                     </header>
-                    <h2 class="question center-align"></h2>
+                    <h2 class="question"></h2>
                     <form class="question-form">
                         <div class="answer">
                             <div class="container-all">
@@ -39,7 +39,7 @@
                             </div>
                         </div>
                     </form>
-                    <div class="emptyDiv"></div>
+                    <div class="container-render"></div>
                 </section>
                 <!--Welcome section-->
                 <section class="section-hiden" id="welcome-section">
