--- a/src/index.html
+++ b/src/index.html
@@ -10,63 +10,7 @@
     </head>
     <body>
         <div class="card z-depth-4">
-            <div class="card-content">
-                <!--answer question screen -->
-                <section class="section-hiden" id="section-question">
-                    <header class="header">
-                        <h1 class="name-owner"></h1>
-                        <label class="date" for="start">
-                            <input name="datepicker" type="date" />
-                        </label>
-                    </header>
-                    <h2 class="question"></h2>
-                    <form class="question-form">
-                        <div class="answer">
-                            <div class="container-all">
-                                <h3 class="year"></h3>
-                                <div class="input-button">
-                                    <div class="input-field">
-                                        <textarea id="answer" class="materialize-textarea"></textarea>
-                                        <label for="answer">Answer</label>
-                                    </div>
-                                    <!--button save submit -->
-                                    <div class="container-button">
-                                        <button class="btn btn-primary" type="submit">
-                                            Save
-                                        </button>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </form>
-                    <div class="container-render"></div>
-                </section>
-                <!--Welcome section-->
-                <section class="section-hiden" id="welcome-section">
-                    <!--Principal IMG-->
-                    <div class="img-container">
-                        <img src="/public/images/diaryimg.png" />
-                    </div>
-                    <div class="container-welcome">
-                        <!--Welcome title-->
-                        <h1 class="principal-title">Welcome to your <span style="color: #e678a7">new diary</span></h1>
-                        <!--Form section-->
-                        <form class="form-nameSubmit">
-                            <div class="input-field">
-                                <!--input -->
-                                <input id="name" type="text" class="validate" name="name" />
-                                <label for="name">What's your name?</label>
-                            </div>
-                            <!--button name submit -->
-                            <div class="container-button button-welcome">
-                                <button id="submit" class="btn btn-primary" type="submit">
-                                    Save
-                                </button>
-                            </div>
-                        </form>
-                    </div>
-                </section>
-            </div>
+            <main class="card-content"></main>
         </div>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     </body>
